# chuk-ai-session-manager

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  ROADMAP-VIRTUAL-MEMORY.md  pyproject.toml  ruff.toml  sample_tools.py  sample_tools_debug.py
.github/workflows/: publish.yml  release.yml  test.yml
docs/memory/: README.md  context-manifest.md  data-structures.md  fault-handling.md  integration.md  models.md  storage.md
examples/: 01_basic_tracking.py  02_session_manager.py  03_infinite_context.py  04_openai_demo.py  05_monitoring.py  06_any_llm.py  06_chuk_llm.py  06_virtual_memory.py  07_llm_virtual_memory.py  08_guards.py  09_procedural_memory.py  chuk_llm_advanced.py  chuk_llm_simple.py  example_infinite_conversation.py  fastapi_session_example.py  hello.py  llm_vm_demo.py  memory_example.py  openai_tool_demo.py  quickstart.py  retry_prompt_demo.py  session_aware_tool_processor.py  session_example.py  session_prompt_builder.py  session_token_usage_example.py  system_prompt_demo.py  vm_demo.py
examples/detailed/: chuk_llm_advanced.py  chuk_llm_simple.py  example_infinite_conversation.py  fastapi_session_example.py  openai_tool_demo.py  quickstart.py  retry_prompt_demo.py  session_aware_tool_processor.py  session_example.py  session_prompt_builder.py  session_token_usage_example.py
src/a2a_accounts/models/: access_control.py  access_levels.py  account.py  project.py
src/chuk_ai_session_manager/: __init__.py  base_models.py  config.py  exceptions.py  infinite_conversation.py  sample_tools.py  session_aware_tool_processor.py  session_manager.py  session_prompt_builder.py  session_storage.py
src/chuk_ai_session_manager/api/: __init__.py  simple_api.py
src/chuk_ai_session_manager/guards/: __init__.py  bindings.py  cache.py  constants.py  manager.py  models.py  ungrounded.py
src/chuk_ai_session_manager/memory/: __init__.py  artifacts_bridge.py  compressor.py  context_packer.py  demand_paging.py  eviction_policy.py  fault_handler.py  manager.py  manifest.py  models.py  mutation_log.py  pack_cache.py  page_table.py  prefetcher.py  tlb.py  vm_prompts.py  working_set.py
src/chuk_ai_session_manager/memory/models/: __init__.py  abi.py  content.py  enums.py  fault.py  page.py  stats.py
src/chuk_ai_session_manager/models/: __init__.py  event_source.py  event_type.py  session.py  session_event.py  session_metadata.py  session_run.py  session_stats.py  token_usage.py
src/chuk_ai_session_manager/procedural_memory/: __init__.py  formatter.py  manager.py  models.py
tests/: conftest.py  test_base_models.py  test_basic_functionality.py  test_compressor.py  test_core_coverage.py  test_demand_paging.py  test_eviction_policy.py  test_exceptions.py  test_fault_handler_coverage.py  test_guards_coverage.py  test_infinite_conversation.py  test_memory.py  test_memory_coverage.py  test_memory_manager.py  test_models.py  test_models_coverage.py  test_procedural_memory_coverage.py  test_prompt_builder.py  test_session_manager.py  test_session_manager_advanced.py  test_simple.py  test_simple_api.py  test_storage.py  test_system_prompt.py  test_tools.py
tests/models/: test_event_source.py  test_event_type.py  test_session.py  test_session_event.py  test_session_metadata.py  test_session_run.py  test_token_usage.py
tests/models/account/: test_access_control.py  test_access_levels.py  test_project.py
tests/storage/: test_base.py
tests/storage/providers/: test_file.py  test_memory.py  test_redis.py
