[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-ai-session-manager"
version = "0.10.2"
description = "Session manager for AI applications"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"

# Core dependencies - only what's absolutely required
dependencies = [
    "chuk-sessions>=0.6.1",
    "chuk-tool-processor>=0.20.1",
    "pydantic>=2.11.3",
]

# Optional dependencies
[project.optional-dependencies]
# Redis support (passes through to chuk-sessions)
redis = [
    "chuk-sessions[redis]>=0.4.1",
    "redis>=4.0.0"
]

# Token counting for better accuracy
tiktoken = ["tiktoken>=0.9.0"]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

# All optional features
all = [
    "chuk-sessions[redis]>=0.6.1",
    "redis>=4.0.0",
    "tiktoken>=0.9.0",
]

# Configure setuptools for src/ layout
[tool.setuptools.packages.find]
where = ["src"]
include = ["chuk_ai_session_manager*"]

# IMPORTANT: This tells setuptools where packages are located
[tool.setuptools.package-dir]
"" = "src"

# pytest settings configured for src/ layout
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--import-mode=importlib",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
    "asyncio: Async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.per-file-ignores]
# Allow imports after module-level code in __init__.py files
"__init__.py" = ["E402", "F401"]
# Allow sys.path modification before imports in examples
"examples/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
exclude = [
    "examples/",
    "tests/",
    ".*/site-packages/.*",
]

# Per-module overrides for files with pre-existing type errors.
# Fix these incrementally and remove the override when clean.
[[tool.mypy.overrides]]
module = [
    "chuk_ai_session_manager.session_manager",
    "chuk_ai_session_manager.session_prompt_builder",
    "chuk_ai_session_manager.session_storage",
    "chuk_ai_session_manager.session_aware_tool_processor",
    "chuk_ai_session_manager.infinite_conversation",
    "chuk_ai_session_manager.models.session",
    "chuk_ai_session_manager.models.session_run",
    "chuk_ai_session_manager.memory.fault_handler",
    "chuk_ai_session_manager.memory.artifacts_bridge",
    "chuk_ai_session_manager.guards.manager",
]
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "bs4>=0.0.2",
    "chuk-llm>=0.3",
    "fastapi>=0.115.12",
    "geopy>=2.4.1",
    "openai>=1.88.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]
